# MoQ-Mixture-of-format-Quantization

./: .gitignore  README.md  moq_progress_update.md  pyproject.toml  run_all.sh  run_baseline.sh  run_remaining_experiments.sh  run_vit_experiments.sh  run_weight_experiments.sh
configs/: llama_moq.yaml  qwen_moq.yaml  vit_moq.yaml
experiment_reports/: Qwen_Evaluation_Results.md
moq/: __init__.py
moq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
moq/baselines/: README.md  __init__.py  baseline_evaluator.py
moq/calibration/: README.md  __init__.py  moq_calibrator.py  search_strategies.py  weight_calibrator.py
moq/evaluation/: README.md  __init__.py  image_evaluator.py  ohr_evaluator.py  ppl_evaluator.py  zero_shot_runner.py
moq/observer/: README.md  __init__.py  statistics_observer.py
moq/quantizers/: README.md  __init__.py  aciq.py  base.py  fp_quantizer.py  int_quantizer.py  mxfp_quantizer.py  nf_quantizer.py  nvfp4_quantizer.py  registry.py
moq/transform/: README.md  __init__.py  hook_injector.py  module_replacer.py
moq/utils/: README.md  __init__.py  data_utils.py
results/: summary.json
results/Qwen2.5-1.5B_combined_a6_w6_eval/: eval_results.json
results/Qwen2.5-1.5B_combined_a6_w8_eval/: eval_results.json
results/Qwen2.5-1.5B_combined_a8_w4_eval/: eval_results.json
scripts/: README.md  collect_results.py  reeval_zeroshot.sh  reproduce_paper.py  run_calibration.py  run_evaluation.py
tests/: README.md  test_calibrator.py  test_evaluation.py  test_quantizers.py  test_transform.py  test_weight_calibrator.py  test_weight_quantizers.py
(+122 files in other folders)
